# Order-lib

./: .env  README.md  alembic.ini  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 13b29014e227_init_jobs_table.py  3441b8fb192c_init_jobs_table_1.py  e944e0641b97_add_client_id_to_jobs.py
cp-lib/: db.py
cp-lib/alembic/: env.py
cp-lib/models/: jobs.py
cp-lib/repositories/: jobs_repository.py
cp-lib/services/: jobs_service.py
cp_lib/: db.py
cp_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cp_lib/models/: jobs.py  schemas.py
cp_lib/repositories/: jobs_repository.py
cp_lib/services/: jobs_service.py
