[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos-lib"
version = "0.1.0"
description = "Core models & services for Chronos Scheduler"
authors = [{name="You",email="you@example.com"}]
readme = "README.md"
license = {text="MIT"}
dependencies = [
  "sqlalchemy>=1.4",
  "alembic",
  "psycopg2-binary"
]

[tool.setuptools.packages.find]
where = ["src"]
