[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cp_lib"
version = "0.1.0"
dynamic = ["requires-python"]
description = "Core models & services for Chronos Scheduler"
authors = [{name="You",email="you@example.com"}]
readme = "README.md"
license = "MIT"
dependencies = [
  "sqlalchemy>=1.4",
  "alembic",
  "psycopg2-binary"
]

[tool.setuptools.packages.find]
where = ["."]
