[metadata]
name = cp_lib
version = 0.1.0
description = Core models & services for Chronos Scheduler

[options]
package_dir =
    = .
packages = find:
install_requires =
    sqlalchemy>=1.4
    alembic
    psycopg2-binary
python_requires = >=3.9

[flake8]
max-line-length = 88
exclude = venv

[pylint:MASTER]
ignore = migrations
